--- a/ClubCloud.Service/App.Config
+++ b/ClubCloud.Service/App.Config
@@ -34,4 +34,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <connectionStrings>
+    <add name="BeheerContainer" connectionString="metadata=res://*/Model.BeheerClubCloud.csdl|res://*/Model.BeheerClubCloud.ssdl|res://*/Model.BeheerClubCloud.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DEVELOPMENT\SHAREPOINT;initial catalog=ClubCloudService_Model_DB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
