--- a/ClubCloud.Service/ClubCloud.Service.csproj
+++ b/ClubCloud.Service/ClubCloud.Service.csproj
@@ -411,7 +411,12 @@
     <None Include="ISAPI\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{c6486a53-a50c-430c-8820-347e87f19a2b}</SharePointProjectItemId>
     </None>
-    <None Include="Layouts\ClubCloud.Service\jquery.min.map" />
+    <None Include="Layouts\ClubCloud.Service\jquery.signalR.min.js.map">
+      <DependentUpon>jquery.signalR.min.js</DependentUpon>
+    </None>
+    <None Include="Layouts\ClubCloud.Service\json2.min.js.map">
+      <DependentUpon>json2.min.js</DependentUpon>
+    </None>
     <None Include="Layouts\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{beb7ab35-f6fa-4edf-885d-f25a20af9004}</SharePointProjectItemId>
     </None>
@@ -468,14 +473,14 @@
       <SharePointProjectItemId>{9c10b425-f593-48c9-96c1-714998bc48f6}</SharePointProjectItemId>
     </None>
     <Content Include="ISAPI\ClubCloud.Service\ClubCloud.svc" />
-    <Content Include="Layouts\ClubCloud.Service\jquery-vsdoc.js" />
-    <Content Include="Layouts\ClubCloud.Service\jquery.intellisense.js" />
-    <Content Include="Layouts\ClubCloud.Service\jquery.js" />
-    <Content Include="Layouts\ClubCloud.Service\jquery.min.js" />
     <Content Include="Layouts\ClubCloud.Service\jquery.signalR.js" />
-    <Content Include="Layouts\ClubCloud.Service\jquery.signalR.min.js" />
+    <Content Include="Layouts\ClubCloud.Service\jquery.signalR.min.js">
+      <DependentUpon>jquery.signalR.js</DependentUpon>
+    </Content>
     <Content Include="Layouts\ClubCloud.Service\json2.js" />
-    <Content Include="Layouts\ClubCloud.Service\json2.min.js" />
+    <Content Include="Layouts\ClubCloud.Service\json2.min.js">
+      <DependentUpon>json2.js</DependentUpon>
+    </Content>
     <Content Include="Model\BeheerClubCloud.edmx.sql" />
     <Content Include="Model\BoekhoudingClubCloud.edmx.sql" />
     <Content Include="WebClients\ClubCloud.Service\client.config" />
@@ -491,7 +496,7 @@
     <ProjectReference Include="..\ClubCloud.Provider\ClubCloud.Provider.csproj">
       <Project>{b259747c-7741-4b61-b261-24fbbe284f05}</Project>
       <Name>ClubCloud.Provider</Name>
-      <Private>True</Private>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\ClubCloud.KNLTB.Servit\ClubCloud.KNLTB.Servit.csproj">
       <Project>{b98cd37b-e5d0-49e4-a765-f8fba945e050}</Project>
@@ -500,6 +505,7 @@
     <ProjectReference Include="..\ClubCloud.Zimbra\ClubCloud.Zimbra.csproj">
       <Project>{04f1320b-7fd4-4429-985c-b3946ed2f519}</Project>
       <Name>ClubCloud.Zimbra</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
