--- a/ClubCloud.Service/ISAPI/ClubCloud.Mobiel/web.config
+++ b/ClubCloud.Service/ISAPI/ClubCloud.Mobiel/web.config
@@ -73,7 +73,7 @@
     <behaviors>
       <endpointBehaviors>
         <behavior name="ClubCloudEndPoint">
-          <enableWebScript />
+          <!--<enableWebScript /> -->
           <dataContractSerializer ignoreExtensionDataObject="false" />
           <endpointDiscovery enabled="true" />
         </behavior>
@@ -102,6 +102,7 @@
       </service>
     </services>
   </system.serviceModel>
+  <!--
   <runtime>
     <assemblyBinding>
       <dependentAssembly xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -122,4 +123,5 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  -->
 </configuration>
