--- a/ClubCloud.Service/App.Config
+++ b/ClubCloud.Service/App.Config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -15,8 +15,9 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="BoekhoudingClubCloud" connectionString="data source=(LocalDb)\v11.0;initial catalog=ClubCloud.Service.Model.BoekhoudingClubCloud;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!-- <add name="BoekhoudingClubCloud" connectionString="data source=(LocalDb)\v11.0;initial catalog=ClubCloud.Service.Model.BoekhoudingClubCloud;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /> -->
     <add name="BeheerContainer" connectionString="metadata=res://*/Model.BeheerClubCloud.csdl|res://*/Model.BeheerClubCloud.ssdl|res://*/Model.BeheerClubCloud.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DEVELOPMENT\SHAREPOINT;initial catalog=ClubCloudService_Model_DB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="BoekhoudingContainer" connectionString="metadata=res://*/Model.BoekhoudingClubCloud.csdl|res://*/Model.BoekhoudingClubCloud.ssdl|res://*/Model.BoekhoudingClubCloud.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DEVELOPMENT\SHAREPOINT;initial catalog=ClubCloudService_Boekhouding_DB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SignalRContainer" connectionString="metadata=res://*/Model.SignalRClubCloud.csdl|res://*/Model.SignalRClubCloud.ssdl|res://*/Model.SignalRClubCloud.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DEVELOPMENT\SHAREPOINT;initial catalog=ClubCloudService_SignalR_Model;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
