--- a/ClubCloud.Common/ClubCloud.Common.csproj
+++ b/ClubCloud.Common/ClubCloud.Common.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ClubCloud.Common</RootNamespace>
     <AssemblyName>ClubCloud.Common</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <TargetOfficeVersion>15.0</TargetOfficeVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{C1CDDADD-2546-481F-9697-4EA41081F2FC};{14822709-B5A1-4724-98CA-57A101D1B079};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -18,6 +18,7 @@
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
     <SandboxedSolution>False</SandboxedSolution>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -120,6 +121,7 @@
     <None Include="Features\Common\Common.feature">
       <FeatureId>{8fdabc4b-381d-400c-b93f-332b6cdb246a}</FeatureId>
     </None>
+    <None Include="Layouts\ClubCloud\Common\clouds.master" />
     <None Include="Layouts\ClubCloud\Common\css\web\common-images\ejicons.eot" />
     <None Include="Layouts\ClubCloud\Common\css\web\common-images\ejicons.ttf" />
     <None Include="Layouts\ClubCloud\Common\css\web\common-images\ejicons.woff" />
@@ -149,6 +151,13 @@
     <Content Include="Features\Common\Common.Template.xml">
       <DependentUpon>Common.feature</DependentUpon>
     </Content>
+    <Content Include="Layouts\ClubCloud\Common\500.aspx" />
+    <Content Include="Layouts\ClubCloud\Common\403.aspx" />
+    <Content Include="Layouts\ClubCloud\Common\401.aspx" />
+    <Content Include="Layouts\ClubCloud\Common\404.aspx" />
+    <Content Include="Layouts\ClubCloud\Common\images\cloud10.png" />
+    <Content Include="Layouts\ClubCloud\Common\scripts\Detector.js" />
+    <Content Include="Layouts\ClubCloud\Common\scripts\three.min.js" />
     <Content Include="Layouts\ClubCloud\Common\css\mobile\android-theme-dark\ej.mobile.android-dark.min.css" />
     <Content Include="Layouts\ClubCloud\Common\css\mobile\android-theme-dark\ej.mobile.core.min.css" />
     <Content Include="Layouts\ClubCloud\Common\css\mobile\android-theme-light\ej.mobile.android-light.min.css" />
